--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast virtual scrolling solution for Angular that natively supports items with unequal heights. Built with @lithiumjs/angular.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
@@ -14,27 +14,34 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/core": "6.x.x - 7.x.x",
-    "@angular/common": "6.x.x - 7.x.x",
-    "@lithiumjs/angular": ">=2.0.0",
+    "@angular/core": "6.x.x - 11.x.x",
+    "@angular/common": "6.x.x - 11.x.x",
+    "@lithiumjs/angular": ">=5.0.0",
     "rxjs": "6.x.x"
   },
   "devDependencies": {
-    "@angular/compiler": "7.0.2",
-    "@angular/compiler-cli": "7.0.2",
-    "@angular/core": "7.0.2",
-    "@angular/common": "7.0.2",
-    "@lithiumjs/angular": "^2.2.0-rc.0",
-    "@types/jasmine": "^2.8.6",
-    "detest-bdd": "^1.1.0",
-    "fs-extra": "^5.0.0",
+    "@angular/compiler": "^11.2.4",
+    "@angular/compiler-cli": "^11.2.4",
+    "@angular/core": "^11.2.4",
+    "@angular/common": "^11.2.4",
+    "@lithiumjs/angular": "^6.0.0-beta.0",
+    "@types/jasmine": "^3.3.13",
+    "detest-bdd": "^1.1.1",
+    "fs-extra": "^8.1.0",
     "istanbul": "^0.4.5",
     "istanbul-cobertura-badger": "^1.3.1",
-    "jasmine": "^3.1.0",
-    "rxjs": "~6.2.0",
-    "source-map-support": "^0.5.3",
-    "typescript": "~3.1.1",
-    "zone.js": "0.8.26"
+    "jasmine": "^3.4.0",
+    "ng-packagr": "^11.2.4",
+    "rxjs": "~6.5.5",
+    "source-map-support": "^0.5.12",
+    "tslib": "^2.0.0",
+    "typescript": "~4.1.0",
+    "zone.js": "~0.10.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "ngPackage": {
+    "lib": {
+      "entryFile": "./src/index.ts"
+    }
+  }
 }
