--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -7,16 +7,16 @@
         "allowSyntheticDefaultImports": true,
         "declaration": true,
         "stripInternal": true,
-        "emitDecoratorMetadata": true,
+        "emitDecoratorMetadata": false,
         "experimentalDecorators": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es6",
+        "target": "es2015",
         "outDir": "./build",
         "rootDir": "..",
         "sourceMap": true,
         "lib": [
-            "es2015",
+            "esnext",
             "dom"
         ]
     },
