--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast virtual scrolling solution for Angular that natively supports items with unequal heights. Built with @lithiumjs/angular.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
@@ -14,9 +14,9 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/core": "6.x.x - 11.x.x",
-    "@angular/common": "6.x.x - 11.x.x",
-    "@lithiumjs/angular": ">=5.0.0",
+    "@angular/core": "6.x.x - 12.x.x",
+    "@angular/common": "6.x.x - 12.x.x",
+    "@lithiumjs/angular": ">=7.0.0",
     "rxjs": "6.x.x"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "@angular/compiler-cli": "^11.2.4",
     "@angular/core": "^11.2.4",
     "@angular/common": "^11.2.4",
-    "@lithiumjs/angular": "^6.0.0-beta.0",
+    "@lithiumjs/angular": "^7.0.0",
     "@types/jasmine": "^3.3.13",
     "detest-bdd": "^1.1.1",
     "fs-extra": "^8.1.0",
