--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast virtual scrolling solution for Angular that natively supports items with unequal heights. Built with @lithiumjs/angular.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
   "private": false,
+  "type": "module",
   "scripts": {
     "prebuild:js": "yarn test",
     "build:js": "node ./scripts/build.js",
@@ -14,29 +15,29 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/core": "6.x.x - 12.x.x",
-    "@angular/common": "6.x.x - 12.x.x",
+    "@angular/core": "8.x.x - 13.x.x",
+    "@angular/common": "8.x.x - 13.x.x",
     "@lithiumjs/angular": ">=7.0.0",
-    "rxjs": "6.x.x"
+    "rxjs": "6.x.x - 7.x.x"
   },
   "devDependencies": {
-    "@angular/compiler": "^11.2.4",
-    "@angular/compiler-cli": "^11.2.4",
-    "@angular/core": "^11.2.4",
-    "@angular/common": "^11.2.4",
-    "@lithiumjs/angular": "^7.0.0",
+    "@angular/compiler": "^13.3.2",
+    "@angular/compiler-cli": "^13.3.2",
+    "@angular/core": "^13.3.2",
+    "@angular/common": "^13.3.2",
+    "@lithiumjs/angular": "^7.1.0",
     "@types/jasmine": "^3.3.13",
-    "detest-bdd": "^1.1.1",
-    "fs-extra": "^8.1.0",
+    "detest-bdd": "^1.2.0",
+    "fs-extra": "^10.0.1",
     "istanbul": "^0.4.5",
     "istanbul-cobertura-badger": "^1.3.1",
-    "jasmine": "^3.4.0",
-    "ng-packagr": "^11.2.4",
-    "rxjs": "~6.5.5",
+    "jasmine": "^4.0.2",
+    "ng-packagr": "^13.3.0",
+    "rxjs": "~7.4.0",
     "source-map-support": "^0.5.12",
-    "tslib": "^2.0.0",
-    "typescript": "~4.1.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.0",
+    "typescript": "~4.6.3",
+    "zone.js": "~0.11.4"
   },
   "dependencies": {},
   "ngPackage": {
