--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,6 @@
 {
+    "extends": "./node_modules/ng-packagr/lib/ts/conf/tsconfig.ngc.json",
     "compilerOptions": {
-        "strict": true,
-        "noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noImplicitAny": true,
-        "noImplicitReturns": true,
-        "allowSyntheticDefaultImports": true,
-        "stripInternal": true,
-        "emitDecoratorMetadata": false,
-        "experimentalDecorators": true,
-        "declaration": true,
-        "module": "es2015",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "target": "es2015",
-        "lib": [
-            "esnext",
-            "dom"
-        ],
-        "outDir": "./dist"
-    },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "typeRoots": [
-        "node_modules/@types"
-    ],
-    "atom": {
-        "rewriteTsConfig": false
-    },
-    "angularCompilerOptions": {
-        "skipTemplateCodegen": true,
-        "strictMetadataEmit": true,
-        "strictTemplates": true,
-        "fullTemplateTypeCheck": true
+        "experimentalDecorators": true
     }
 }
