--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
     "extends": "./node_modules/ng-packagr/lib/ts/conf/tsconfig.ngc.json",
     "compilerOptions": {
+        "strict": true,
         "experimentalDecorators": true
-    }
+    },
+    "files": [],
+    "include": [
+        "src/**/*.ts"
+    ]
 }
