--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast and lightweight virtual scrolling solution for Angular that supports single column lists, grid lists and view caching.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
@@ -15,34 +15,29 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/core": "8.x.x - 13.x.x",
-    "@angular/common": "8.x.x - 13.x.x",
+    "@angular/common": "8.x.x - 14.x.x",
+    "@angular/core": "8.x.x - 14.x.x",
     "@lithiumjs/angular": ">=7.0.0",
     "rxjs": "6.x.x - 7.x.x"
   },
   "devDependencies": {
-    "@angular/compiler": "^13.3.2",
-    "@angular/compiler-cli": "^13.3.2",
-    "@angular/core": "^13.3.2",
-    "@angular/common": "^13.3.2",
-    "@lithiumjs/angular": "^7.1.0",
-    "@types/jasmine": "^3.3.13",
+    "@angular/common": "^14.2.6",
+    "@angular/compiler": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.6",
+    "@angular/core": "^14.2.6",
+    "@lithiumjs/angular": "^7.2.1",
+    "@types/jasmine": "^4.0.0",
     "detest-bdd": "^1.2.0",
     "fs-extra": "^10.0.1",
     "istanbul": "^0.4.5",
     "istanbul-cobertura-badger": "^1.3.1",
     "jasmine": "^4.0.2",
-    "ng-packagr": "^13.3.0",
+    "ng-packagr": "14.2.1",
     "rxjs": "~7.4.0",
     "source-map-support": "^0.5.12",
     "tslib": "^2.3.0",
-    "typescript": "~4.6.3",
+    "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
-  "dependencies": {},
-  "ngPackage": {
-    "lib": {
-      "entryFile": "./src/index.ts"
-    }
-  }
+  "dependencies": {}
 }
