--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,7 +2,8 @@
     "extends": "./node_modules/ng-packagr/lib/ts/conf/tsconfig.ngc.json",
     "compilerOptions": {
         // Overrides:
-        "strict": true
+        "strict": true,
+        "useDefineForClassFields": false
     },
     "files": [],
     "include": [
