--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast and lightweight virtual scrolling solution for Angular that supports single column lists, grid lists and view caching.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
@@ -15,29 +15,29 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/common": "8.x.x - 17.x.x",
-    "@angular/core": "8.x.x - 17.x.x",
+    "@angular/common": "8.x.x - 18.x.x",
+    "@angular/core": "8.x.x - 18.x.x",
     "@lithiumjs/angular": ">=7.0.0",
     "rxjs": "6.x.x - 7.x.x"
   },
   "devDependencies": {
-    "@angular/common": "^17.0.7",
-    "@angular/compiler": "^17.0.7",
-    "@angular/compiler-cli": "^17.0.7",
-    "@angular/core": "^17.0.7",
-    "@lithiumjs/angular": "^7.3.1",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/compiler-cli": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@lithiumjs/angular": "^8.0.0",
     "@types/jasmine": "^4.3.1",
-    "c8": "^8.0.1",
+    "c8": "^10.1.2",
     "detest-bdd": "^1.2.1",
     "extensionless": "^1.9.6",
     "fs-extra": "^11.0.1",
     "istanbul-cobertura-badger": "^1.3.1",
     "jasmine": "^4.6.0",
-    "ng-packagr": "17.0.3",
+    "ng-packagr": "^18.0.0",
     "rxjs": "~7.4.0",
     "source-map-support": "^0.5.12",
     "tslib": "^2.3.0",
-    "typescript": "~5.2.2",
-    "zone.js": "~0.14.2"
+    "typescript": "~5.4.5",
+    "zone.js": "~0.14.7"
   }
 }
