--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,5 +1,8 @@
 {
-    "extends": "./node_modules/ng-packagr/lib/ts/conf/tsconfig.ngc.json",
+    "extends": "./node_modules/ng-packagr/src/lib/ts/conf/tsconfig.ngc.json",
+    "angularCompilerOptions": {
+        "strictTemplates": true
+    },
     "compilerOptions": {
         // Overrides:
         "strict": true,
