--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lithiumjs/ngx-virtual-scroll",
   "description": "A fast and lightweight virtual scrolling solution for Angular that supports single column lists, grid lists and view caching.",
   "repository": "https://github.com/lVlyke/lithium-ngx-virtual-scroll",
-  "version": "0.3.4",
+  "version": "1.0.0",
   "main": "index.js",
   "author": "Mychal Thompson <mychalrthompson@gmail.com>",
   "license": "MIT",
@@ -15,29 +15,30 @@
     "test": "node ./scripts/test.js"
   },
   "peerDependencies": {
-    "@angular/common": "8.x.x - 20.x.x",
-    "@angular/core": "8.x.x - 20.x.x",
-    "@lithiumjs/angular": ">=7.0.0",
+    "@angular/common": "21.x.x",
+    "@angular/core": "21.x.x",
+    "@lithiumjs/angular": ">=8.0.0",
     "rxjs": "6.x.x - 7.x.x"
   },
   "devDependencies": {
-    "@angular/common": "^20.0.6",
-    "@angular/compiler": "^20.0.6",
-    "@angular/compiler-cli": "^20.0.6",
-    "@angular/core": "^20.0.6",
-    "@lithiumjs/angular": "^8.0.2",
-    "@types/jasmine": "^5.1.8",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
+    "@angular/compiler-cli": "^21.1.0",
+    "@angular/core": "^21.1.0",
+    "@angular/platform-browser": "^21.1.0",
+    "@lithiumjs/angular": "^9.0.0",
+    "@types/jasmine": "^5.1.15",
     "c8": "^10.1.3",
     "detest-bdd": "^1.2.1",
-    "extensionless": "^1.9.9",
-    "fs-extra": "^11.3.0",
+    "extensionless": "^2.0.6",
+    "fs-extra": "^11.3.3",
     "istanbul-cobertura-badger": "^1.3.1",
     "jasmine": "^5.8.0",
-    "ng-packagr": "^20.0.1",
+    "ng-packagr": "^21.1.0",
     "rxjs": "~7.8.2",
     "source-map-support": "^0.5.21",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.3",
-    "zone.js": "~0.15.0"
+    "typescript": "~5.9.3",
+    "zone.js": "~0.16.0"
   }
 }
